--- a/scripts/ycsb/memcached.config
+++ b/scripts/ycsb/memcached.config
@@ -1,8 +1,8 @@
-export ROUND=3
+export ROUND=10
 export WKLDS="heavy latest mostread onlyread rmw short"
 export WKLD_PATH="$PWD/ycsb_wkld"
-export OUTPATH="/mnt/hongbo/sls-bench/scripts/ycsb/exp"
-export REDIS="/mnt/hongbo/sls-bench/redis/src/redis-server"
+export OUTPATH="/mnt/hongbo/sls-bench/scripts/ycsb/memcached_exp"
+export MEMCACHED="/mnt/hongbo/sls-bench/memcached/memcached -u hongbo"
 export YCSB_PATH="/mnt/hongbo/sls-bench/YCSB/"
 export SLS="/mnt/hongbo/sls/tools/slsctl/slsctl"
 export SLSKO="/mnt/hongbo/sls/kmod/sls.ko"
