--- a/scripts/ycsb/memcached.config
+++ b/scripts/ycsb/memcached.config
@@ -1,6 +1,6 @@
-export ROUND=10
+export ROUND=5
 export WKLDS="heavy latest mostread onlyread rmw short"
-export WKLD_PATH="$PWD/ycsb_wkld"
+export WKLD_PATH="$PWD/memcached_wkld"
 export OUTPATH="/mnt/hongbo/sls-bench/scripts/ycsb/memcached_exp"
 export MEMCACHED="/mnt/hongbo/sls-bench/memcached/memcached -u hongbo"
 export YCSB_PATH="/mnt/hongbo/sls-bench/YCSB/"
