--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+ConfigArgParse==0.14.0
 mysql-connector-python==8.0.16
 numpy==1.16.4
 protobuf==3.9.0
 selenium==3.141.0
 six==1.12.0
+Tkinter==0.0.0
 urllib3==1.24.1
