--- a/microbench/bench.conf
+++ b/microbench/bench.conf
@@ -1,8 +1,11 @@
-run-for = 5
+run-for = 10
 freq = 1000
 max-threads = 24
 num-files = 100
-repeat = 2
-num-steps 2
-num-obj = 2048
+repeat = 3
+num-steps = 5
+num-obj = 4192
+max-mem = 4
+sls-dir = /home/ryan/sls
+mount-dir = /slsbench
 
