--- a/microbench/bench.conf
+++ b/microbench/bench.conf
@@ -1,11 +1,11 @@
-run-for = 10
+run-for = 5
 freq = 1000
-max-threads = 24
-num-files = 100
-repeat = 3
-num-steps = 5
-num-obj = 4192
-max-mem = 4
-sls-dir = /home/ryan/sls
-mount-dir = /slsbench
+max-threads = 1
+num-files = 10
+repeat = 1
+num-steps = 1
+num-obj = 1
+max-mem = 1
+sls-dir = /usr/home/ryan/sls
+mount-dir = /
 
