--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "redis"]
-    path = redis
-    url = https://github.com/antirez/redis.git
+	path = redis
+	url = https://github.com/antirez/redis.git
+	branch = 6.0
