Added VM and Default Mode
Summary:
Added ability to select a VM mode in the aurora.config file. In this
mode benchmarks have their throughput requirements etc reduced as well
as Aurora switches to using the in memory version of its checkpointing
system. File system benchmarks still require some form of a stripe

Found a misconfiguration and required to specifically set the frequency
of checkpoints within the filebench benchmarks.

Test Plan: Test on a VM

Reviewers: tavianator, etsal, ali

Reviewed By: etsal

Differential Revision: https://review.rcs.uwaterloo.ca/D570

--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -1,5 +1,4 @@
 #!/bin/sh
-
 ################################################################################
 ####################  REQUIRED OPTIONS #########################################
 ################################################################################
@@ -27,8 +26,15 @@ EXTERNAL_HOSTS="sourdough"
 # Redis and memcached clients must know the IP of the server to connect to.
 # This should be the IP of the system running Aurora, and should be reachable
 # by all hosts outlined in EXTERNAL_HOSTS
-AURORA_IP="192.168.2.131"
+AURORA_IP="129.97.75.69"
 
+# Mode to run the benchmarks in:
+#   VM: This mode will run in a reduced performace mode as we found during high frequency checkpointing
+#   these VM's would often crash in unexpected ways. We provide this mode so the evaluater can easily check
+#   the functionality of our code before moving to a real host.
+#   DEFAULT: This mode assumes server level hardware as well as access to high throughput NVMe devices, which is
+#   required for Aurora.
+MODE="VM"
 
 ################################################################################
 ####################  OTHER OPTIONS ############################################
