RocksDB VM Mode
Test Plan: Test on VM

Reviewers: tavianator, etsal, ali

Reviewed By: tavianator

Differential Revision: https://review.rcs.uwaterloo.ca/D573

--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -9,8 +9,8 @@
 #    STRIPEDISKS="nvd0 nvd1 nvd2 nvd3"
 STRIPEDISKS="nvd0 nvd1 nvd2 nvd3"
 
-ROCKS_STRIPE1="nvd0 nvd1"
-ROCKS_STRIPE2="nvd2 nvd3"
+ROCKS_STRIPE1="vtbd1 vtbd2"
+ROCKS_STRIPE2="vtbd3"
 
 # The directory which holds the Aurora Source code. Must be an absolute directory.
 SRCROOT="/usr/home/ryan/workspace/sls"
