--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -9,8 +9,8 @@
 #    STRIPEDISKS="nvd0 nvd1 nvd2 nvd3"
 STRIPEDISKS="nvd0 nvd1 nvd2 nvd3"
 
-ROCKS_STRIPE1="vtbd1 vtbd2"
-ROCKS_STRIPE2="vtbd3"
+ROCKS_STRIPE1="nvd0 nvd1"
+ROCKS_STRIPE2="nvd2 nvd3"
 
 # The directory which holds the Aurora Source code. Must be an absolute directory.
 SRCROOT="/usr/home/ryan/workspace/sls"
@@ -26,7 +26,7 @@ EXTERNAL_HOSTS="sourdough"
 # Redis and memcached clients must know the IP of the server to connect to.
 # This should be the IP of the system running Aurora, and should be reachable
 # by all hosts outlined in EXTERNAL_HOSTS
-AURORA_IP="129.97.75.69"
+AURORA_IP="192.168.2.131"
 
 # Mode to run the benchmarks in:
 #   VM: This mode will run in a reduced performace mode as we found during high frequency checkpointing
@@ -34,7 +34,7 @@ AURORA_IP="129.97.75.69"
 #   the functionality of our code before moving to a real host.
 #   DEFAULT: This mode assumes server level hardware as well as access to high throughput NVMe devices, which is
 #   required for Aurora.
-MODE="VM"
+MODE="DEFAULT"
 
 ################################################################################
 ####################  OTHER OPTIONS ############################################
