Improving the readme with more dependencies and details on system configuration
Summary: Adding more dependencies and system configuration details

Test Plan: none

Reviewers: tavianator, etsal, ryan

Reviewed By: etsal

Differential Revision: https://review.rcs.uwaterloo.ca/D587

--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -13,7 +13,7 @@ ROCKS_STRIPE1="nvd0 nvd1"
 ROCKS_STRIPE2="nvd2 nvd3"
 
 # The directory which holds the Aurora Source code. Must be an absolute directory.
-SRCROOT="/usr/home/ryan/workspace/sls"
+SRCROOT="/root/sls"
 
 # Benchmarks Redis and Memcached require additional hosts to run as these
 # benchmarks will use the additional hosts to produce client requests which
