added scripts for tables 4-6
Summary: Scripts for 4-6

Test Plan: TBD

Reviewers: tavianator, ryan, ali

Reviewed By: ryan

Differential Revision: https://review.rcs.uwaterloo.ca/D564

--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -7,13 +7,16 @@
 #
 # Example: 
 #    STRIPEDISKS="nvd0 nvd1 nvd2 nvd3"
-STRIPEDISKS="nvd0 nvd1 nvd2 nvd3"
+STRIPEDISKS="vtbd1 vtbd2"
+#STRIPEDISKS="vtbd1 vtbd2"
 
-ROCKS_STRIPE1="nvd0 nvd1"
-ROCKS_STRIPE2="nvd2 nvd3"
+
+#ROCKS_STRIPE1="nvd0 nvd1"
+#ROCKS_STRIPE2="nvd2 nvd3"
 
 # The directory which holds the Aurora Source code. Must be an absolute directory.
 SRCROOT="/root/sls"
+BENCHROOT="/root/sls-bench"
 
 # Benchmarks Redis and Memcached require additional hosts to run as these
 # benchmarks will use the additional hosts to produce client requests which
@@ -61,3 +64,7 @@ FILEBENCH=$(pwd)/dependencies/filebench/filebench
 
 # Memcached specific configuration options
 AURORA_MEMCACHED_URL=$AURORA_IP
+
+# Location where we mount Aurora
+MNT="/testmnt"
+mkdir -p $MNT
