Cleanup the default config file and add more comments
Summary: Cleanup the default config file and add more comments

Test Plan: ./setup.sh

Reviewers: tavianator, etsal, ryan

Reviewed By: ryan

Differential Revision: https://review.rcs.uwaterloo.ca/D597

--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -2,17 +2,18 @@
 ################################################################################
 ####################  REQUIRED OPTIONS #########################################
 ################################################################################
+
 # These are the disks you wish to use for the evaluation, base name is all that
-# is required for these devices
+# is required for these devices.
 #
 # Example: 
 #    STRIPEDISKS="nvd0 nvd1 nvd2 nvd3"
-STRIPEDISKS="vtbd1 vtbd2"
-#STRIPEDISKS="vtbd1 vtbd2"
+STRIPEDISKS="nvd0 nvd1 nvd2 nvd3"
 
-
-#ROCKS_STRIPE1="nvd0 nvd1"
-#ROCKS_STRIPE2="nvd2 nvd3"
+# These are the disks used for the RocksDB benchmarks.  The first stripe is the 
+# object store and the second stripe is used for the object store WAL.
+ROCKS_STRIPE1="nvd0 nvd1"
+ROCKS_STRIPE2="nvd2 nvd3"
 
 # The directory which holds the Aurora Source code. Must be an absolute directory.
 SRCROOT="/root/sls"
@@ -66,5 +67,5 @@ FILEBENCH=$(pwd)/dependencies/filebench/filebench
 AURORA_MEMCACHED_URL=$AURORA_IP
 
 # Location where we mount Aurora
+# XXX: Do not modify this because fs benchmarks are hard coded.
 MNT="/testmnt"
-mkdir -p $MNT
