Add warning that we require at least two disks to run
Summary: Add warning that we require at least two disks to run

Test Plan: none

Reviewers: tavianator, etsal, ryan

Reviewed By: ryan

Differential Revision: https://review.rcs.uwaterloo.ca/D602

--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -4,7 +4,8 @@
 ################################################################################
 
 # These are the disks you wish to use for the evaluation, base name is all that
-# is required for these devices.
+# is required for these devices.  Use only 2 or 4 disks for the stripe and 1 or 
+# 2 disks for each RocksDB stripes.
 #
 # Example: 
 #    STRIPEDISKS="nvd0 nvd1 nvd2 nvd3"
@@ -33,11 +34,13 @@ EXTERNAL_HOSTS="sourdough"
 AURORA_IP="192.168.2.131"
 
 # Mode to run the benchmarks in:
-#   VM: This mode will run in a reduced performace mode as we found during high frequency checkpointing
-#   these VM's would often crash in unexpected ways. We provide this mode so the evaluater can easily check
-#   the functionality of our code before moving to a real host.
-#   DEFAULT: This mode assumes server level hardware as well as access to high throughput NVMe devices, which is
-#   required for Aurora.
+#   VM: A reduced performace mode for virtual machines because Aurora currently 
+#   suffers from instability if the system is too slow.  We provide this mode 
+#   to allow verification of the functionality before moving to a physical 
+#   host.
+#
+#   DEFAULT: This mode requires a fast physical host and access to multiple 
+#   high throughput NVMe devices.
 MODE="DEFAULT"
 
 ################################################################################
