properly configure Firefox and update README
Summary: In order to replicate the numbers for Firefox we need to run in single process mode, as we did for the original submissions. Since this new version of Firefox has a different resident set size, update the README to explain the discrepancy between the numbers.

Test Plan: Running table 6

Reviewers: tavianator, ryan, ali

Reviewed By: ali

Differential Revision: https://review.rcs.uwaterloo.ca/D608

--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -26,7 +26,7 @@ BENCHROOT="/root/sls-bench"
 # keys set up with alias outlined in the root users .ssh/config file. Place the
 # alias used in this config file for the host. These ssh connections to client
 # do NOT require root access.
-EXTERNAL_HOSTS="sourdough"
+EXTERNAL_HOSTS="skylake5"
 
 # Redis and memcached clients must know the IP of the server to connect to.
 # This should be the IP of the system running Aurora, and should be reachable
