--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -17,8 +17,8 @@ ROCKS_STRIPE1="nvd0 nvd1"
 ROCKS_STRIPE2="nvd2 nvd3"
 
 # The directory which holds the Aurora Source code. Must be an absolute directory.
-SRCROOT="/root/sls"
-BENCHROOT="/root/sls-bench"
+SRCROOT="/root/aurora"
+BENCHROOT="/root/aurora-bench"
 
 # Benchmarks Redis and Memcached require additional hosts to run as these
 # benchmarks will use the additional hosts to produce client requests which
@@ -26,7 +26,7 @@ BENCHROOT="/root/sls-bench"
 # keys set up with alias outlined in the root users .ssh/config file. Place the
 # alias used in this config file for the host. These ssh connections to client
 # do NOT require root access.
-EXTERNAL_HOSTS="skylake5"
+EXTERNAL_HOSTS="skylake2-int skylake3-int"
 
 # Redis and memcached clients must know the IP of the server to connect to.
 # This should be the IP of the system running Aurora, and should be reachable
