fig4b.sh: Cleaned up, moved latency measuring server to remove machine, turned transparent restarts back on

--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -26,7 +26,8 @@ BENCHROOT="/root/aurora-bench"
 # keys set up with alias outlined in the root users .ssh/config file. Place the
 # alias used in this config file for the host. These ssh connections to client
 # do NOT require root access.
-EXTERNAL_HOSTS="skylake2-int"
+EXTERNAL_HOSTS="skylake1-int skylake3-int skylake6-int skylake7-int"
+MUT_MASTER="skylake2-int"
 
 # Redis and memcached clients must know the IP of the server to connect to.
 # This should be the IP of the system running Aurora, and should be reachable
@@ -67,7 +68,7 @@ OUT="/aurora-data"
 FILEBENCH=$(pwd)/dependencies/filebench/filebench
 
 # Memcached specific configuration options
-AURORA_MEMCACHED_URL=$AURORA_IP
+MC_URL=$AURORA_IP
 
 # Location where we mount Aurora
 # XXX: Do not modify this because fs benchmarks are hard coded.
