aurora.config: Add ALL_HOSTS variable

--- a/artifact_evaluation/aurora.config
+++ b/artifact_evaluation/aurora.config
@@ -28,6 +28,7 @@ BENCHROOT="/root/aurora-bench"
 # do NOT require root access.
 EXTERNAL_HOSTS="skylake1-int skylake3-int skylake6-int skylake7-int"
 MUT_MASTER="skylake2-int"
+ALL_HOSTS="$EXTERNAL_HOSTS $MUT_MASTER"
 
 # Redis and memcached clients must know the IP of the server to connect to.
 # This should be the IP of the system running Aurora, and should be reachable
